[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "precision-locator"
version = "5.0.0"
description = "智能精准定位工具包 - 四级降级策略"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "playwright>=1.40.0",
    "langchain-openai>=0.1.0",
    "langchain-core>=0.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
local-vision = [
    "paddleocr>=2.7.0,<3.0.0",
    "paddlepaddle>=2.5.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]

[project.scripts]
precision-locator = "precision_locator.server:main"

[tool.setuptools.packages.find]
include = ["precision_locator*"]
